--- a/contributing.html
+++ b/contributing.html
@@ -87,7 +87,7 @@
 				While there are still many exciting features to add,
 				and a list of 
 				<a href="https://github.com/stewdio/q.js/issues" target="_blank">issues to resolve</a>,
-				this anniversary a milestone worth celebrating.
+				this anniversary is a milestone worth celebrating.
 				As initial work on the circuit editor interface winds down
 				our focus will shift back to optimization of the simulator itself. 
 				During Summer 2020 our primary focus will be wrangling
