Q asset names update 1 of 2.

--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 		<meta name="twitter:creator"      content="@stew_rtsmith">
 		<meta name="twitter:title"        content="Quantum JavaScript (Q.js)">
 		<meta name="twitter:description"  content="Quantum computing in your browser.">
-		<meta name="twitter:image"        content="https://quantumjavascript.app/assets/q-thumbnail.png">
+		<meta name="twitter:image"        content="https://quantumjavascript.app/assets/Q-website-preview.png">
 		
 		<meta property="og:type"          content="website">
 		<meta property="og:title"         content="Quantum JavaScript (Q.js)">
 		<meta property="og:description"   content="Quantum computing in your browser.">
-		<meta property="og:image"         content="https://quantumjavascript.app/assets/q-thumbnail.png">
+		<meta property="og:image"         content="https://quantumjavascript.app/assets/Q-website-preview.png">
 		<meta property="og:url"           content="https://quantumjavascript.app/">
 		
 		<link rel="canonical" href="https://quantumjavascript.app/">
-		<link href="assets/q-favicon-064.png" rel="icon" type="image/png">
-		<link href="assets/q-favicon-144.png" rel="apple-touch-icon">
+		<link href="assets/Q-favicon-064.png" rel="icon" type="image/png">
+		<link href="assets/Q-favicon-144.png" rel="apple-touch-icon">
 		
 		<link rel="stylesheet" href="Q/Q.css">
 		<link rel="stylesheet" href="Q/Q-Circuit-Editor.css">
