--- a/contributing.html
+++ b/contributing.html
@@ -28,17 +28,17 @@
 		<meta name="twitter:creator"      content="@stew_rtsmith">
 		<meta name="twitter:title"        content="Q ⟩ Contributing">
 		<meta name="twitter:description"  content="Quantum computing in your browser.">
-		<meta name="twitter:image"        content="https://quantumjavascript.app/assets/q-thumbnail.png">
+		<meta name="twitter:image"        content="https://quantumjavascript.app/assets/Q-website-preview.png">
 		
 		<meta property="og:type"          content="website">
 		<meta property="og:title"         content="Q ⟩ Contributing">
 		<meta property="og:description"   content="Quantum computing in your browser.">
-		<meta property="og:image"         content="https://quantumjavascript.app/assets/q-thumbnail.png">
+		<meta property="og:image"         content="https://quantumjavascript.app/assets/Q-website-preview.png">
 		<meta property="og:url"           content="https://quantumjavascript.app/contributing.html">
 		
 		<link rel="canonical" href="https://quantumjavascript.app/contributing.html">
-		<link href="assets/q-favicon-064.png" rel="icon" type="image/png">
-		<link href="assets/q-favicon-144.png" rel="apple-touch-icon">
+		<link href="assets/Q-favicon-064.png" rel="icon" type="image/png">
+		<link href="assets/Q-favicon-144.png" rel="apple-touch-icon">
 		
 		<link rel="stylesheet" href="Q/Q.css">
 		<link rel="stylesheet" href="Q/Q-Circuit-Editor.css">
@@ -239,12 +239,12 @@ cat.<a href="Q-ComplexNumber.html#.add$"><strong>add$</strong></a>( dog )<span c
 cat.<a href="Q-ComplexNumber.html#.toText">toText</a>()   <span class="comment">//  Now returns '4 - 2i'</span>
 </pre></code>
 			<p>
-				The notable exception to this is the “python-inspired”
-				super-short circuit editing syntax
+				The notable exception to this is the “Python-inspired”
+				circuit editing syntax
 				which uses convenience functions <strong>not</strong>
 				suffixed with a dollar sign.
 				This allows creating a circuit in Q to more closely resemble
-				editing a python script for Amazon Braket, Qiskit, and so on:
+				editing a Python script for Amazon Braket, IBM Qiskit, and so on:
 			</p>
 <pre><code>
 <a href="Q.html">Q</a>( 2, 2 )
