--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				<a href="https://quantumjavascript.app/">https://quantumjavascript.app</a>
 				on social media with the hashtag 
 				<a href="https://twitter.com/search?q=%23Qjs" target="_blank">#Qjs</a>.
-				Let’s make quantum computing accesible!
+				Let’s make quantum computing accessible!
 			</p>
 			<hr>
 			<h3>Quantum JavaScript</h3>
