New preview image, tutorial GIF.

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 		<meta name="twitter:creator"      content="@stew_rtsmith">
 		<meta name="twitter:title"        content="Quantum JavaScript (Q.js)">
 		<meta name="twitter:description"  content="Quantum computing in your browser.">
-		<meta name="twitter:image"        content="https://quantumjavascript.app/assets/Q-website-preview.png">
+		<meta name="twitter:image"        content="https://quantumjavascript.app/assets/Q-website-preview.jpg">
 		
 		<meta property="og:type"          content="website">
 		<meta property="og:title"         content="Quantum JavaScript (Q.js)">
 		<meta property="og:description"   content="Quantum computing in your browser.">
-		<meta property="og:image"         content="https://quantumjavascript.app/assets/Q-website-preview.png">
+		<meta property="og:image"         content="https://quantumjavascript.app/assets/Q-website-preview.jpg">
 		<meta property="og:url"           content="https://quantumjavascript.app/">
 		
 		<link rel="canonical" href="https://quantumjavascript.app/">
