--- a/tutorials.html
+++ b/tutorials.html
@@ -28,12 +28,12 @@
 		<meta name="twitter:creator"      content="@stew_rtsmith">
 		<meta name="twitter:title"        content="Q ⟩ Tutorials">
 		<meta name="twitter:description"  content="Quantum computing in your browser.">
-		<meta name="twitter:image"        content="https://quantumjavascript.app/assets/Q-website-preview.png">
+		<meta name="twitter:image"        content="https://quantumjavascript.app/assets/Q-website-preview.jpg">
 		
 		<meta property="og:type"          content="website">
 		<meta property="og:title"         content="Q ⟩ Tutorials">
 		<meta property="og:description"   content="Quantum computing in your browser.">
-		<meta property="og:image"         content="https://quantumjavascript.app/assets/Q-website-preview.png">
+		<meta property="og:image"         content="https://quantumjavascript.app/assets/Q-website-preview.jpg">
 		<meta property="og:url"           content="https://quantumjavascript.app/tutorials.html">
 		
 		<link rel="canonical" href="https://quantumjavascript.app/tutorials.html">
@@ -87,7 +87,7 @@
 				Tap the control button to join the two, 
 				creating a controlled gate.
 			</p>
-			<img src="assets/demos/Q-demo-editor-1.gif">
+			<img src="assets/demos/Q-demo-bellstate.gif">
 		</main>
 	</body>
 </html>
