typo: probabilty -> probability

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<br>
 			<div class="Q-circuit-palette"></div>
 			<div id="example"></div>
-			<h4>Live probabilty results</h4>
+			<h4>Live probability results</h4>
 			<p>
 				Edit the code above
 				and watch the probabilty results update in realtime.
