typo: probabilty -> probability

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			<h4>Live probability results</h4>
 			<p>
 				Edit the code above
-				and watch the probabilty results update in realtime.
+				and watch the probability results update in realtime.
 			</p>
 			<pre><samp id="example-report" for="example"></samp></pre>
 			<h3>Free and open-source</h3>
