--- a/Q-Qubit.html
+++ b/Q-Qubit.html
@@ -336,13 +336,13 @@
 				Measurement itself causes a qubit’s
 				<a href="https://en.wikipedia.org/wiki/Wave_function_collapse"  target="_blank">probability wave to collapse</a>,
 				brining an end to its superposition.
-				The probabilty that upon measurement a qubit’s
+				The probability that upon measurement a qubit’s
 				<a href="https://en.wikipedia.org/wiki/Probability_amplitude" target="_blank">probability amplitude</a>
 				will 
 				<a href="#.prototype.collapse">collapse</a> to 
 				<span class="complex-vector ket">0</span>
 				is |<code><a href="Q-Qubit.html#this.alpha">alpha</a></code>|<sup>2</sup>,
-				while the probabilty that it will 
+				while the probability that it will 
 				<a href="#.prototype.collapse">collapse</a> to 
 				<span class="complex-vector ket">1</span>
 				is |<code><a href="Q-Qubit.html#this.beta">beta</a></code>|<sup>2</sup>.
