--- a/Q.html
+++ b/Q.html
@@ -119,7 +119,7 @@ var circuit = Q`
 					<dd>
 						<code class="value-type">Number</code>
 						Expected to be a number from <code>0</code> to <code>1</code>, inclusive.
-						Throttles the ouput of built-in console logging.
+						Throttles the output of built-in console logging.
 					</dd>
 				</li>
 				<li>
