--- a/Q-Qubit.html
+++ b/Q-Qubit.html
@@ -383,7 +383,7 @@
 				as <span class="symbol">x</span> and <span class="symbol">y</span> respectively,
 				the outcome is a circle with a radius of 1 centered at the origin (0, 0); 
 				ie. a <a href="https://en.wikipedia.org/wiki/Unit_circle)" target="_blank">unit circle</a>.
-				All possilbe combinations of 
+				All possible combinations of 
 				<code><a href="Q-Qubit.html#this.alpha">alpha</a></code>
 				and
 				<code><a href="Q-Qubit.html#this.beta">beta</a></code>
