--- a/Q-ComplexNumber.html
+++ b/Q-ComplexNumber.html
@@ -502,7 +502,7 @@ elk.<a href="#this.index">index</a> === fox.<a href="#.prototype.index">index</a
 					<dt id=".ZERO">ZERO</dt>
 					<dd>
 						<code class="value-type"><a href="Q.html">Q</a>.ComplexNumber</code>
-						Intialized as
+						Initialized as
 						<code>new <a href="Q.html">Q</a>.ComplexNumber( 0, 0 )</code>.
 						Described as 0.
 					</dd>
@@ -511,7 +511,7 @@ elk.<a href="#this.index">index</a> === fox.<a href="#.prototype.index">index</a
 					<dt id=".ONE">ONE</dt>
 					<dd>
 						<code class="value-type"><a href="Q.html">Q</a>.ComplexNumber</code>
-						Intialized as
+						Initialized as
 						<code>new <a href="Q.html">Q</a>.ComplexNumber( 1, 0 )</code>.
 						Described as 1.
 					</dd>
@@ -520,7 +520,7 @@ elk.<a href="#this.index">index</a> === fox.<a href="#.prototype.index">index</a
 					<dt id=".E">E</dt>					
 					<dd>
 						<code class="value-type"><a href="Q.html">Q</a>.ComplexNumber</code>
-						Intialized as
+						Initialized as
 						<code>new <a href="Q.html">Q</a>.ComplexNumber( Math.E, 0 )</code>.
 						Described as <span class="symbol">e</span> ≈ 2.7183.
 					</dd>
@@ -529,7 +529,7 @@ elk.<a href="#this.index">index</a> === fox.<a href="#.prototype.index">index</a
 					<dt id=".PI">PI</dt>
 					<dd>
 						<code class="value-type"><a href="Q.html">Q</a>.ComplexNumber</code>
-						Intialized as
+						Initialized as
 						<code>new <a href="Q.html">Q</a>.ComplexNumber( Math.PI, 0 )</code>.
 						Described as <a href="https://youtu.be/L1eegVTwDS0" target="_blank"><strong>exactly</strong> equal to 3</a>.
 					</dd>
@@ -538,7 +538,7 @@ elk.<a href="#this.index">index</a> === fox.<a href="#.prototype.index">index</a
 					<dt id=".I">I</dt>
 					<dd>
 						<code class="value-type"><a href="Q.html">Q</a>.ComplexNumber</code>
-						Intialized as
+						Initialized as
 						<code>new <a href="Q.html">Q</a>.ComplexNumber( 0, 1 )</code>.
 						Described as <span class="symbol">i</span>.
 					</dd>
@@ -547,7 +547,7 @@ elk.<a href="#this.index">index</a> === fox.<a href="#.prototype.index">index</a
 					<dt id=".EPSILON">EPSILON</dt>
 					<dd>
 						<code class="value-type"><a href="Q.html">Q</a>.ComplexNumber</code>
-						Intialized as
+						Initialized as
 						<code>new <a href="Q.html">Q</a>.ComplexNumber( <a href="Q.html">Q</a>.<a href="Q.html#.EPSILON">EPSILON</a>, <a href="Q.html">Q</a>.<a href="Q.html#.EPSILON">EPSILON</a> )</code>.
 						Described as ≈ 1.3323 × 10<sup>-15</sup> + 1.3323 × 10<sup>-15</sup><span class="symbol">i</span>.
 					</dd>
@@ -556,7 +556,7 @@ elk.<a href="#this.index">index</a> === fox.<a href="#.prototype.index">index</a
 					<dt id=".INFINITY">INFINITY</dt>
 					<dd>
 						<code class="value-type"><a href="Q.html">Q</a>.ComplexNumber</code>
-						Intialized as
+						Initialized as
 						<code>new <a href="Q.html">Q</a>.ComplexNumber( Infinity, Infinity )</code>.
 						Described as <span class="symbol">∞</span> + <span class="symbol">∞i</span>.
 					</dd>
@@ -565,7 +565,7 @@ elk.<a href="#this.index">index</a> === fox.<a href="#.prototype.index">index</a
 					<dt id=".NAN">NAN</dt>
 					<dd>
 						<code class="value-type"><a href="Q.html">Q</a>.ComplexNumber</code>
-						Intialized as
+						Initialized as
 						<code>new <a href="Q.html">Q</a>.ComplexNumber( NaN, NaN )</code>.
 						<code>Array( 16 ).join( NaN ) +' BATMAN!'</code>
 					</dd>
