--- a/Q-Circuit.html
+++ b/Q-Circuit.html
@@ -311,7 +311,7 @@
 			<p>
 				To create the above circuit we can take advantage of several Q shortcuts.
 				To beging with, the <a href="Q.html"><code>Q</code> object</a> itself is a function
-				that internally passess its arguments to the
+				that internally passes its arguments to the
 				<code>Circuit.<a href="Q-Circuit.html#.fromText">fromText()</a></code>
 				static method.
 				This function can accept text as an argument, 
@@ -528,7 +528,7 @@ fox.<a href="#.prototype.try$">try$</a>()
 </code></pre>		
 			<h3 id="Overlapping_multi-qubit_gates">Overlapping multi-qubit gates</h3>
 			<p>
-				Some physical architectures allow for interactioins between qubits that don’t resolve in to the simplest diagrams.
+				Some physical architectures allow for interactions between qubits that don’t resolve in to the simplest diagrams.
 				Take this circuit, for example, which contains two C-not gates at moment 2:
 			</p>
 <pre><code>
