Small updates to Resources page.

--- a/Q-Matrix.html
+++ b/Q-Matrix.html
@@ -165,7 +165,7 @@
 				<a href="Q-Qubit.html">qubits</a> are really just a pair of
 				complex numbers
 				that we store in a 1 × 2 matrix.
-				So, yes—the examples matrices above are actually <em>more complicated</em> than qubits are!)
+				So, yes—the example matrices above are actually <em>more complicated</em> than qubits are!)
 				In general, we don’t even have to think about 
 				the fact that our matrices are storing complex numbers
 				because 
