--- a/resources.html
+++ b/resources.html
@@ -63,23 +63,25 @@
 
 
 
-			<h3>What is a quantum computer?</h3>
+			<h3>Gentle introductions</h3>
 			<p>
-				So you’ve heard the term 
+				You’ve heard the term 
 				“<a href="https://en.wikipedia.org/wiki/Quantum_computing" target="_blank">quantum computing</a>” 
 				but you’re not sure what it means.
-				Don’t be afraid! 
+				(And what does a quantum computer even look like?)
+				Don’t be afraid. 
 				Start with these gentle introductions.
 			</p>
 
 
-			<h4>Dr. Talia Gershon explains quantum computing for WIRED (2018)</h4>
-			<img src="assets/references/talia-gershon.jpg">
+			<h4>What is Quantum Computing?</h4>
+			<a class="call-out" href="https://youtu.be/OWJCfOvochA" target="_blank"><img src="assets/references/talia-gershon.jpg"></a>
 			<p>
 				<a class="call-out" href="https://youtu.be/OWJCfOvochA" target="_blank">https://youtu.be/OWJCfOvochA</a>
 				<br>
-				Dr. Gershon is the director of research strategy and growth initiatives at IBM.
-				In this twenty-minute video she expertly explains quantum computing
+				Dr. Talia Gershon is the director of research strategy and growth initiatives at IBM.
+				In this twenty-minute video for WIRED Magazine (2018)
+				she expertly explains quantum computing
 				to five levels of understanding—personified by a child, 
 				teen, undergrad, grad student, and a field professional.
 				She also refers to an actual quantum computer apparatus 
@@ -94,20 +96,16 @@
 			</p>
 
 
-			<h4>
-				Scott Aaronson and
-				Zach Weinersmith’s
-				“The Talk” (2016)
-			</h4>
-			<img src="assets/references/the-talk.jpg">
+			<h4>The Quantum Computing talk</h4>
+			<a class="call-out" href="https://www.smbc-comics.com/comic/the-talk-3" target="_blank"><img src="assets/references/the-talk.jpg"></a>
 			<p>
 				<a class="call-out" href="https://www.smbc-comics.com/comic/the-talk-3" target="_blank">https://www.smbc-comics.com/comic/the-talk-3</a>
 				<br>
 				Cartoonist Zach Weinersmith teams up with Scott Aaronson, 
 				director of the <a href="http://www.cs.utexas.edu/~qic/" target="_blank">Quantum Information Center</a>
 				at the University of Texas at Austin,
-				to produce this comic that is both humorous and informative. 
-				It also takes gentle swipes at pop-science’s 
+				to produce “The Talk” (2016)—a one-off comic that is both humorous and informative. 
+				It also takes gentle swipes at pop science’s 
 				mangled metaphors for explaining quantum phenomena.
 				Remember, parents: “If you don’t talk to your kids about quantum computing
 				someone else will.”
@@ -116,6 +114,22 @@
 				<a href="https://twitter.com/ZachWeiner" target="_blank">Zach Weinersmith on Twitter</a>
 			</p>
 
+
+
+
+			<hr>
+			<h3>Quantum communities</h3>
+			<h4>The Quantum Daily</h4>
+			<a class="call-out" href="https://thequantumdaily.com/" target="_blank"><img src="assets/references/the-quantum-daily.png"></a>
+			<p>
+				<a class="call-out" href="https://thequantumdaily.com/" target="_blank">https://thequantumdaily.com</a><br>
+				The Quantum Daily (TQD) is the 
+				leading online information and data platform 
+				dedicated exclusively to Quantum Computing. 
+				TQD provides incisively written articles, 
+				information on quantum computing companies, 
+				market research and more.  
+			</p>
 
 
 
@@ -206,10 +220,8 @@
 			</p>
 
 
-
-
 			<hr>
-			<h3>Arrrgg. I need specifics.</h3>
+			<h3>Particulars</h3>
 			<h4>
 				Gwilym Newton’s
 				“Playing with the Bloch Sphere”
@@ -257,8 +269,14 @@
 
 
 			<hr>
-			<h3>Q.js</h3>
-			<h4>Q.js on GitHub</h4>
+			<h3 id="Quantum_JavaScript_Qjs">Quantum JavaScript (Q.js)</h3>
+			<h4>Q turns 1 (Medium)</h4>
+			<img src="assets/references/quantum-javascript-medium.jpg">
+			<p>
+				<a class="call-out" href="https://medium.com/@stew_rtsmith/quantum-javascript-d1effb84a619" target="_blank">https://medium.com/@stew_rtsmith/quantum-javascript-d1effb84a619</a><br>
+				A post written on the occasion of Q’s first birthday.
+			</p>
+			<h4>Q source code (GitHub)</h4>
 			<p>
 				<a class="call-out" href="https://github.com/stewdio/q.js" target="_blank">https://github.com/stewdio/q.js</a>
 				<br>
@@ -268,13 +286,13 @@
 				documentation / examples / concept primer / source code,
 				everything exists at this one location.
 			</p>
-			<h4>Q.js documentation</h4>
+			<h4>Q documentation and tools</h4>
 			<p>
 				<a class="call-out" href="https://quantumjavascript.app/" target="_blank">https://quantumjavascript.app</a>
 				<br>
 				This very site that you are reading right now.
 			</p>
-			<h4>Q.js on Twitter</h4>
+			<h4 id="Qjs_on_twitter">#Qjs on Twitter</h4>
 			<p>
 				<a class="call-out" href="https://twitter.com/stew_rtsmith/status/1123415441915957250" target="_blank">https://twitter.com/stew_rtsmith/status/1123415441915957250</a>
 				<br>
@@ -286,10 +304,11 @@
 				Let’s use the hashtag
 				<a href="https://twitter.com/hashtag/Qjs" target="_blank">#Qjs</a>, eh?
 			</p>
-			<h4>Hi, I’m Stewart</h4>
+			<h4>Stewart Smith, Q creator</h4>
 			<p>
 				<a class="call-out" href="http://stewartsmith.io" target="_blank">http://stewartsmith.io</a>
 				<br>
+				Hi, I’m Stewart.
 				I do other things besides attempt to teach myself quantum computing.
 				I’ve been educated as a graphic designer and fine artist,
 				but began coding at an early age.
