R19. Gates update, etc.

--- a/Q-Qubit.html
+++ b/Q-Qubit.html
@@ -1542,7 +1542,7 @@ const blochSphereGates = document.getElementById( 'bloch-sphere-gates' )
 	gateElement.classList.add( 'bloch-sphere-gate' )
 
 	gateElement.setAttribute( 'title', gate.name )
-	gateElement.innerText = gate.label
+	gateElement.innerText = gate.symbol
 	gateContainerElement.appendChild( gateElement )
 
 	gateNameElement.innerText = gate.name
