--- a/Q.html
+++ b/Q.html
@@ -82,8 +82,8 @@
 <pre><code>
 var circuit = Q`
 
-	<strong>H</strong>-<strong>C0</strong>-<strong>X</strong>
-	<strong>I</strong>-<strong>C1</strong>-<strong>X</strong>
+	<strong>H</strong>-<strong>X#0</strong>
+	<strong>I</strong>-<strong>X#1</strong>
 `
 </code></pre>
 			<p>
@@ -342,11 +342,6 @@ a.<a href="Q-ComplexNumber.html#.prototype.multiply">multiply</a>( a ).<a href="
 			</ul>
 		</main>
 		<script>
-
-
-
-
-console.log( Q.help() )
 
 
 
