--- a/contributing.html
+++ b/contributing.html
@@ -59,7 +59,7 @@
 	</head>
 	<body>
 		<main>			
-			<h3>Contributing to Q</h3>
+			<h3>Q needs you</h3>
 			<p>
 				It’s time for Q to grow.
 				But it’s also 2020—we’re right in the middle of the
@@ -182,10 +182,12 @@
 				inspect anything right from your own browser console
 				in realtime.
 				This is one of the reasons Q shuns 
-				<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Modules" target="_blank">JavaScript modules</a>
+				<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Modules" target="_blank">JavaScript modules</a>,
+				is sensitive to the use of
+				<a href="https://en.wikipedia.org/wiki/Closure_(computer_programming)#State_representation" target="_blank">closures</a>,
 				and hangs all of its functionality off of the 
 				<a href="Q.html" target="_blank">Q object</a>
-				which sits in the global scope.
+				which sits in the global scope
 				For us “hackability” is important—particularly for teaching and learning.
 				By “hackable” we mean heavily inspectable and customizable
 				by the curious—novice and expert alike.
